# shinyguard

./: .gitignore  LICENSE.txt  README.md  coverage.sh  pyproject.toml
.githooks/: pre-commit
.github/workflows/: release.yml
shinyguard/: __init__.py  android.py  cli.py  exceptions.py  main.py  network.py  schema.py  utils.py
tests/: conftest.py  constants.py  test_cli.py  test_main.py  test_network.py  test_patch_date.py
