[tool.poetry]
name = "shinyguard"
version = "0.1.0"
description = "Check for LineageOS security updates"
authors = ["shinycore"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.9"
marshmallow = "^3.9.1"
regex = "^2020.11.13"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
flakehell = "^0.7.0"
pyflakes = "^2.2.0"
pytest = "^6.1.2"

[tool.black]
line-length = 119

[tool.flakehell]
exclude = [".venv"]
format = "default"

[tool.flakehell.plugins]
pyflakes = ["+*"]

[tool.isort]
line_length = 119
profile = "black"
